--- a/HotFudgeSundae.html
+++ b/HotFudgeSundae.html
@@ -38,7 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
+            <button type="submit" class="order-button">Order Now</button>
 
         </form>
     </div>
