--- a/thankyou.html
+++ b/thankyou.html
@@ -1,10 +1,12 @@
+<!-- This is Thank You page  -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Rockwell Cuisine | Thank You</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="fontAwesome/css/all.css" />
-  </head>
+<head>
+  <title>Rezas Cuisine | Bistro Burger</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fontAwesome/css/all.css">
+
+</head>
   <body class="body-meals">
     <div class="header">
       <a href="index.html">
@@ -16,6 +18,7 @@
         <img class="product-image" src="images/img-background.avif" alt="Product Image">
         <h2 class="product-name">Thank youfor your order</h2>
         <p class="product-description">The order will be delivered shortly</p>
+        </div>
         
             
   </body>
