--- a/ChocolateBrownie.html
+++ b/ChocolateBrownie.html
@@ -38,7 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
+            <a href="thankyou.html"><button class="order-button">Order Now</button></a>
 
         </form>
     </div>
