--- a/ChocolateBrownie.html
+++ b/ChocolateBrownie.html
@@ -38,7 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <a href="thankyou"><class="order-button">Order Now</button></a>
+            <a href="thankyou"><button class="order-button">Order Now</button></a>
 
         </form>
     </div>
