--- a/HotFudgeSundae.html
+++ b/HotFudgeSundae.html
@@ -39,6 +39,7 @@
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
             <button type="submit" class="order-button">Order Now</button>
+            <a href="thankyou.html"></a>
 
         </form>
     </div>
