--- a/Turkey-Sandwich.html
+++ b/Turkey-Sandwich.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rockwell Cuisine | Turkey-Sandwich</title>
+  <title>Rezas Cuisine | Turkey-Sandwich</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
