--- a/deserts.html
+++ b/deserts.html
@@ -1,8 +1,8 @@
 <!-- Deserts category page -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rockwell Cuisine | Deserts</title>
+    <title>Rezas Cuisine | Deserts</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="fontAwesome/css/all.css" />
   </head>
