--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rockwell Cuisine</title>
+    <title>Rezas Cuisine</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body-home">
