--- a/meals.html
+++ b/meals.html
@@ -1,8 +1,8 @@
 <!-- Meals category page -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rockwell Cuisine | Meals</title>
+    <title>Rezas Cuisine | Meals</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="fontAwesome/css/all.css" />
   </head>
