--- a/roadside-slider.html
+++ b/roadside-slider.html
@@ -1,8 +1,8 @@
 <!-- This is roadside-slider page  -->
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-  <title>Rockwell Cuisine | Slider</title>
+  <title>Rezas Cuisine | Slider</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
@@ -35,9 +35,11 @@
                 <li><input type="checkbox" name="extras" value="cheese"> 2 Types of Cheese</li>
                 <li><input type="checkbox" name="extras" value="pineapple"> Pineapple Slice</li>
             </ul>
-            <button class="order-button">Order Now</button>
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
+            <a href="thankyou.html"class="order-button">Order Now</a>
+
+            
 
         </form>
     </div>
