--- a/starters.html
+++ b/starters.html
@@ -1,8 +1,8 @@
 <!-- Starters category page -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rockwell Cuisine | Starters</title>
+  <title>Rezas Cuisine | Starters</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
