--- a/thankyou.html
+++ b/thankyou.html
@@ -1,6 +1,6 @@
 <!-- This is Thank You page  -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Rezas Cuisine | Bistro Burger</title>
   <link rel="stylesheet" href="style.css">
