--- a/drinks.html
+++ b/drinks.html
@@ -1,8 +1,8 @@
 <!-- Drinks category page -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rockwell Cuisine | Drinks</title>
+    <title>Rezas Cuisine | Drinks</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="fontAwesome/css/all.css" />
   </head>
