--- a/hotdrinks.html
+++ b/hotdrinks.html
@@ -1,8 +1,8 @@
 <!-- This is hot drinks page  -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rockwell Cuisine | Hot Drinks</title>
+  <title>Rezas Cuisine | Hot Drinks</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
@@ -38,8 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
-
+            <a href="thankyou.html"class="order-button">Order Now</a>
         </form>
     </div>
     
