--- a/quesadilla.html
+++ b/quesadilla.html
@@ -1,8 +1,8 @@
 <!-- This is Quesadilla page  -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rockwell Cuisine | Quesadilla</title>
+  <title>Rezas Cuisine | Quesadilla</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
@@ -38,7 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
+            <a href="thankyou.html"class="order-button">Order Now</a>
 
         </form>
     </div>
