--- a/soup-salad.html
+++ b/soup-salad.html
@@ -1,8 +1,8 @@
 <!-- This is Soup & Salad page  -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rockwell Cuisine | Starters</title>
+  <title>Rezas Cuisine | Starters</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 
@@ -27,6 +27,7 @@
         <p class="product-price">R19.99</p>
         
         <form action="thankyou.html" method="post">
+
             <h2>Add Extras</h2>
             <ul>
                 <li><input type="checkbox" name="extras" value="chips"> Chips</li>
@@ -38,7 +39,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
+            <a href="thankyou.html"class="order-button">Order Now</a>
 
         </form>
     </div>
