--- a/Turkey-Sandwich.html
+++ b/Turkey-Sandwich.html
@@ -1,6 +1,6 @@
 <!-- This is Turkey-Sandwich page  -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Rezas Cuisine | Turkey-Sandwich</title>
   <link rel="stylesheet" href="style.css">
@@ -38,7 +38,7 @@
             <h2>Special Requests</h2>
             <textarea name="requests" placeholder="Add your special requests here"></textarea>
 
-            <button class="order-button">Order Now</button>
+            <a href="thankyou.html"class="order-button">Order Now</a>
 
         </form>
     </div>
